--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,19 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', end
 	width:100%; height:40px;
 }
 .pad-0{padding:0px !important;}
+
+/*@media (min-width: 768px){
+ #messageBlock {
+    position: absolute;
+    top: 0px;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow-y: scroll; 
+  }
+}
+
+#messageBlock {
+  text-align: center;
+  height:100%;
+}*/
